--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,20 @@ jobs:
             python -m pip install --upgrade pip
             pip install -r requirements.txt
 
-        - name: Run tests
-          run: |
-            python manage.py test
+        # - name: Run tests
+        #   run: |
+        #     python manage.py test
 
-        # - name: Set up Nodejs
-        #   uses: actions/setup-node@v4
-        #   with:
-        #     node-version: ${{ matrix.node-version }}
+        - name: Set up Nodejs
+          uses: actions/setup-node@v4
+          with:
+            node-version: ${{ matrix.node-version }}
 
-        # - name: 
+  
+        - name: Install frontend dependencies
+          working-directory: frontend
+          run: npm ci
+
+        - name: Build frontend
+          working-directory: frontend
+          run: npm run build --if-present
