--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,8 @@ jobs:
   
         - name: Install frontend dependencies
           working-directory: frontend
-          run: npm ci --legacy-peer-deps
+          # run: npm ci --legacy-peer-deps
+          run: npm install
 
         - name: Build frontend
           working-directory: frontend
