--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,12 @@ jobs:
           # run: npm ci --legacy-peer-deps
           run: npm install
 
+        - name: Lint Code
+          working-directory: frontend
+          run: npm run lint || true # Ignore failures
+
         - name: Build frontend
           working-directory: frontend
           run: |
            export DISABLE_ESLINT_PLUGIN=true
-           npm run build --if-present
+           npm run build --if-present --no-verify
