--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,4 +53,4 @@ jobs:
           working-directory: frontend
           run: |
            export DISABLE_ESLINT_PLUGIN=true
-           npm run build --if-present --no-verify
+           npm run build --if-present 
