--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,29 +40,19 @@ jobs:
             node-version: ${{ matrix.node-version }}
 
   
-        # - name: Install frontend dependencies
-        #   working-directory: frontend
-        #   # run: npm ci --legacy-peer-deps
-        #   run: npm install
-
-        # - name: Lint Code
-        #   working-directory: frontend
-        #   run: npm run lint || true # Ignore failures
-
-        # - name: Build frontend
-        #   working-directory: frontend
-        #   run: |
-        #    export DISABLE_ESLINT_PLUGIN=true
-        #    npm run build --if-present 
-
         - name: Install frontend dependencies
           working-directory: frontend
-          run: |
-            npm install --save-dev @babel/plugin-proposal-private-property-in-object
-            npm install --legacy-peer-deps
+          # run: npm ci --legacy-peer-deps
+          run: npm install
+
+        - name: Lint Code
+          working-directory: frontend
+          run: npm run lint || true # Ignore failures
 
         - name: Build frontend
           working-directory: frontend
           env:
-            DISABLE_ESLINT_PLUGIN: true
-          run: npm run build --if-present
+            CI: false
+          run: |
+           export DISABLE_ESLINT_PLUGIN=true
+           npm run build --if-present 
