--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
             python -m pip install --upgrade pip
             pip install -r requirements.txt
 
-        # - name: Run tests
-        #   run: |
-        #     python manage.py test
+        - name: Run tests
+          run: |
+            python manage.py test
 
         - name: Set up Nodejs
           uses: actions/setup-node@v4
