--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
             pip install -r requirements.txt
 
         - name: Run tests
-          run: |
-            python manage.py test
+          run: python manage.py test
 
         - name: Set up Nodejs
           uses: actions/setup-node@v4
