--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,12 @@ jobs:
     build:
         runs-on: ubuntu-latest
 
+        env:
+            RDS_DB_NAME: ${{ secrets.RDS_DB_NAME }}
+            RDS_USERNAME: ${{ secrets.RDS_USERNAME }}
+            RDS_PASSWORD: ${{ secrets.RDS_PASSWORD }}
+            RDS_HOSTNAME: ${{ secrets.RDS_HOSTNAME }}
+
         strategy:
             matrix:
                 python-version: [3.x]
