--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,176 @@
+# name: ProShop CI
+
+# on: 
+#     push:
+#         branches: [master]
+#     pull_request:
+#         branches: [master]
+
+# jobs:
+#     build:
+#         runs-on: ubuntu-latest
+
+#         env:
+#             RDS_DB_NAME: ${{ secrets.RDS_DB_NAME }}
+#             RDS_USERNAME: ${{ secrets.RDS_USERNAME }}
+#             RDS_PASSWORD: ${{ secrets.RDS_PASSWORD }}
+#             RDS_HOSTNAME: ${{ secrets.RDS_HOSTNAME }}
+
+#         strategy:
+#             matrix:
+#                 python-version: [3.x]
+#                 node-version: [16.x]
+
+#         steps:
+#         - name: Checkout code
+#           uses: actions/checkout@v4
+
+#         - name: Set up Python 
+#           uses: actions/setup-python@v5
+#           with:
+#             python-version: ${{ matrix.python-version }}
+#             cache: 'pip'
+
+#         - name: Install dependencies 
+#           run: |
+#             python -m pip install --upgrade pip
+#             pip install -r requirements.txt
+
+#         - name: Run tests
+#           run: python manage.py test
+
+#         - name: Set up Nodejs
+#           uses: actions/setup-node@v4
+#           with:
+#             node-version: ${{ matrix.node-version }}
+
+  
+#         - name: Install frontend dependencies
+#           working-directory: frontend
+#           # run: npm ci --legacy-peer-deps
+#           run: npm install
+
+#         - name: Lint Code
+#           working-directory: frontend
+#           run: npm run lint || true # Ignore failures
+
+#         - name: Build frontend
+#           working-directory: frontend
+#           env:
+#             CI: false
+#           run: |
+#            export DISABLE_ESLINT_PLUGIN=true
+#            npm run build --if-present 
+
+
+
+
 name: ProShop CI
 
 on: 
-    push:
-        branches: [master]
-    pull_request:
-        branches: [master]
+  push:          # Trigger workflow on pushes to the master branch
+    branches: [master]
+  pull_request:  # Trigger workflow on pull requests targeting the master branch
+    branches: [master]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  # Build and test job
+  build:
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
 
-        env:
-            RDS_DB_NAME: ${{ secrets.RDS_DB_NAME }}
-            RDS_USERNAME: ${{ secrets.RDS_USERNAME }}
-            RDS_PASSWORD: ${{ secrets.RDS_PASSWORD }}
-            RDS_HOSTNAME: ${{ secrets.RDS_HOSTNAME }}
+    env:
+      # Load RDS database secrets into environment variables
+      RDS_DB_NAME: ${{ secrets.RDS_DB_NAME }}
+      RDS_USERNAME: ${{ secrets.RDS_USERNAME }}
+      RDS_PASSWORD: ${{ secrets.RDS_PASSWORD }}
+      RDS_HOSTNAME: ${{ secrets.RDS_HOSTNAME }}
 
-        strategy:
-            matrix:
-                python-version: [3.x]
-                node-version: [16.x]
+    strategy:
+      matrix:
+        # Define test environments
+        python-version: [3.x]  # Python version for backend
+        node-version: [16.x]  # Node.js version for frontend
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+    steps:
+    # Checkout the repository code
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-        - name: Set up Python 
-          uses: actions/setup-python@v5
-          with:
-            python-version: ${{ matrix.python-version }}
-            cache: 'pip'
+    # Set up Python environment
+    - name: Set up Python 
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}  # Use Python version from the matrix
+        cache: 'pip'  # Cache pip dependencies
 
-        - name: Install dependencies 
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+    # Install Python dependencies
+    - name: Install dependencies 
+      run: |
+        python -m pip install --upgrade pip  # Upgrade pip
+        pip install -r requirements.txt  # Install dependencies from requirements.txt
 
-        - name: Run tests
-          run: python manage.py test
+    # Run backend tests
+    - name: Run tests
+      run: python manage.py test
 
-        - name: Set up Nodejs
-          uses: actions/setup-node@v4
-          with:
-            node-version: ${{ matrix.node-version }}
+    # Set up Node.js environment
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}  # Use Node.js version from the matrix
 
-  
-        - name: Install frontend dependencies
-          working-directory: frontend
-          # run: npm ci --legacy-peer-deps
-          run: npm install
+    # Install frontend dependencies
+    - name: Install frontend dependencies
+      working-directory: frontend  # Change working directory to frontend
+      run: npm install  # Install dependencies
 
-        - name: Lint Code
-          working-directory: frontend
-          run: npm run lint || true # Ignore failures
+    # Lint frontend code
+    - name: Lint Code
+      working-directory: frontend
+      run: npm run lint || true  # Ignore failures (useful for non-blocking checks)
 
-        - name: Build frontend
-          working-directory: frontend
-          env:
-            CI: false
-          run: |
-           export DISABLE_ESLINT_PLUGIN=true
-           npm run build --if-present 
+    # Build the frontend
+    - name: Build frontend
+      working-directory: frontend
+      env:
+        CI: false  # Disable CI for npm (to avoid warnings)
+      run: |
+        export DISABLE_ESLINT_PLUGIN=true  # Disable ESLint during the build
+        npm run build --if-present  # Build the frontend if build script exists
+
+  # Docker Build and Push Job
+  push_to_docker_register:
+    runs-on: ubuntu-latest  # Use the latest Ubuntu runner
+    needs: build  # Run this job after the build job completes
+
+    steps:
+    # Checkout the repository code
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    # Log in to Docker Hub
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2  # Docker Hub login action
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}  # Docker Hub username (from secrets)
+        password: ${{ secrets.DOCKER_PASSWORD }}  # Docker Hub password (from secrets)
+
+    # Extract metadata for Docker
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v4
+      with:
+        images: ${{ secrets.DOCKER_USERNAME }}/proshop
+
+    # Build and push backend Docker image
+    - name: Build and push backend Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }} -f Dockerfile .  # Build backend image
+        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }}  # Push backend image to Docker Hub
+
+    # Build and push frontend Docker image
+    - name: Build and push frontend Docker image
+      working-directory: frontend  # Change working directory to frontend
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ steps.meta.outputs.tags }} -f Dockerfile .  # Build frontend image
+        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ steps.meta.outputs.tags }}  # Push frontend image to Docker Hub
