--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -170,7 +170,7 @@ jobs:
     - name: Build and push backend Docker image
       run: |
         docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }} -f Dockerfile .  # Build backend image
-        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }}  # Push backend image to Docker Hub
+        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }}  # Push backend image
 
     # Build and push frontend Docker image
     - name: Build and push frontend Docker image
