Add version tagging for Docker images

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -169,8 +169,10 @@ jobs:
     # Build and push backend Docker image
     - name: Build and push backend Docker image
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }} -f Dockerfile .  # Build backend image
-        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }}  # Push backend image
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-backend:latest -t ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }} -f Dockerfile .
+        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-backend:latest
+        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ steps.meta.outputs.tags }}
+
 
     # Build and push frontend Docker image
     - name: Build and push frontend Docker image
