--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,5 +192,5 @@ jobs:
     - name: Build and push frontend Docker image
       working-directory: frontend  # Change working directory to frontend
       run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ steps.meta.outputs.tags }} -f Dockerfile .  # Build frontend image
-        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ steps.meta.outputs.tags }}  # Push frontend image to Docker Hub
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ env.version }} -f Dockerfile .  # Build frontend image
+        docker push ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ env.version }}  # Push frontend image to Docker Hub
