--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -165,11 +165,11 @@ jobs:
     - name: Build and push Docker image
       run: |
         docker build --progress=plain -t ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ env.version }} -f Dockerfile . || exit 1
-        docker push --progress=plain ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ env.version }} || exit 1
+        docker push --verbose ${{ secrets.DOCKER_USERNAME }}/proshop-backend:${{ env.version }} || exit 1
 
     # Build and push frontend Docker image
     - name: Build and push frontend Docker image
       working-directory: frontend  # Change working directory to frontend
       run: |
         docker build --progress=plain -t ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ env.version }} -f Dockerfile .   || exit 1 # Build frontend image
-        docker push --progress=plain ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ env.version }}  || exit 1 # Push frontend image to Docker Hub
+        docker push --verbose ${{ secrets.DOCKER_USERNAME }}/proshop-frontend:${{ env.version }}  || exit 1 # Push frontend image to Docker Hub
